--- a/app/src/main/res/layout/activity_findpw.xml
+++ b/app/src/main/res/layout/activity_findpw.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="이메일 주소를 입력하세요."
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintLeft_toLeftOf="parent"
