--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -1,17 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey_background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
+        android:id="@+id/test_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="생리용품 테스트"
-        android:textSize="50sp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:fontFamily="@font/nixgon_bold"
+        android:text="생리대 TEST"
+        android:textColor="@color/black"
+        android:textSize="80px"
+
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.068" />
+
+    <TextView
+        android:id="@+id/test_explain_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+
+        android:text="당신에게 적합한 생리대 유형과 \n올바른 사용 방법을 찾아보세요"
+        android:textColor="#AAAAAA"
+        android:textSize="30px"
+        android:textStyle="bold"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/test_title"
+        app:layout_constraintVertical_bias="0.025" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/category1_what_is_this2_cv"
+        android:layout_width="900px"
+        android:layout_height="1130px"
+        android:backgroundTint="@color/white"
+        android:elevation="0dp"
+        app:cardCornerRadius="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/test_explain_tv"
+        app:layout_constraintVertical_bias="0.231">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/category1_what_is_this2_title_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="40dp"
+            android:gravity="center"
+            android:text="Q1. 생리할 때 나의 활동량은\n많은 편이에요."
+            android:textColor="@color/black"
+            android:textSize="50px"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:paddingTop="30dp"
+            android:paddingBottom="30dp">
+
+            <ImageView
+                android:id="@+id/test1_check_ok"
+                android:layout_width="300px"
+                android:layout_height="300px"
+                android:src="@drawable/test_ok"
+                android:scaleType="centerInside"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
+
+            <ImageView
+                android:id="@+id/test1_check_no"
+                android:layout_width="300px"
+                android:layout_height="300px"
+                android:src="@drawable/test_no"
+                android:scaleType="centerInside"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"/>
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/test1_next_btn"
+            android:layout_width="750px"
+            android:layout_height="150px"
+            android:background="@drawable/round_grey"
+            android:gravity="center"
+            android:text="다음으로"
+            android:textColor="#A9A9A9"
+            android:layout_marginTop="40dp"
+            android:textStyle="bold"
+           />
+
+
+    </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/test1_bottom_iv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="fitEnd"
+        android:src="@drawable/img_test1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        tools:layout_editor_absoluteX="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
